# open-intent-router

./: .env.deepseek.example  .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  dependencies.py  main.py
app/api/: admin.py  agents.py  events.py  health.py  plans.py  router.py  runs.py  runtime.py  sessions.py
app/core/: config.py  errors.py  redaction.py  security.py
app/db/: models.py  session.py
app/invokers/: __init__.py  base.py  http.py  local_function.py  mock.py  registry.py  ui_handoff.py
app/llm/: __init__.py  client.py  mock.py  openai_compatible.py
app/plugins/: __init__.py  evidence.py
app/prompts/: router_prompt.py
app/repositories/: database.py  file_registry.py  interfaces.py  json_utils.py  memory.py
app/schemas/: agents.py  common.py  events.py  invocation.py  logs.py  plans.py  routing.py  runtime.py  sessions.py
app/services/: chat_history_service.py  context_service.py  event_service.py  invocation_service.py  plan_builder.py  plan_service.py  registry_service.py  router_service.py
config/: agents.example.yaml  fixed_questions.example.yaml
docs/: agent-definition.md  api.md  evidence-provider.md  oac-migration.md  openspec-handoff.md  visual-test-ui.md  开源意图识别项目需求分析文档.md
tests/: conftest.py  test_admin_security.py  test_api.py  test_cors.py  test_events_plans_evidence.py  test_openai_compatible_llm.py  test_registry.py  test_router_prompt.py  test_routing_invocation.py  test_runtime_config.py  test_schemas.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.test.tsx  (+4 more)
(+23 files in other folders)
